# lci_calibration

./: CMakeLists.txt  CTestConfiguration.ini  README.md  export.sh  package.xml
app/: lci_node.cpp
cmake/: FindLZ4.cmake  FindPCL.cmake
config/: config.yaml  lci_calibration.yaml
gazebo/: lci_world
gazebo/unit_cylinder/: model.sdf
include/factor/: imu_factor.hpp
include/lci_cali/: continuous_imu.hpp  continuous_se3.hpp  input.hpp  lci_cali.hpp  se3_spline_helper.hpp
include/lci_cali/spline/: imu_spline.hpp  lidar_spline.hpp
include/sensor_data/: cloud_type.h  imu_data.hpp  lidar_data.h  lidar_feature.h  lidar_vlp_16.h  vlp16_data.hpp
include/utils/: config_yaml.h  cpp_utils.hpp  img_utils.hpp  imu_integral.hpp  input.hpp  lidar_utils.hpp  math_utils.hpp  ndt_utils.hpp  plane_map.hpp  ui_utils.hpp
launch/: lci_calibration.launch.py
rviz/: default.rviz
src/app/: lci_cali_node.cpp  lci_img_test_node.cpp  lci_node.cpp  test_math_node.cpp  test_ndt_spline_node.cpp
src/ikd-tree/: ikd_Tree.cpp
src/lci_cali/: continuous_imu.cpp  input.cpp  lci_cali.cpp
src/utils/: ORBextractor.cc  config_yaml.cpp  img_utils.cpp  ui_utils.cpp
test/: test.cpp
urdf/: lci_cali.world  test.urdf
